# echoshader

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: gsoc2026.yml
.github/workflows/: pypi.yaml
docs/source/version_0.1.0/: get_moored_data.ipynb  get_ship_data.ipynb  hist_examples.ipynb  track_examples.ipynb
echoshader/: core.py  echogram.py
echoshader/plots/: box.py  echogram.py  hist.py  map.py
echoshader/tests/: test.py
