[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=7",
    "setuptools_scm_git_archive",
    "wheel",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
fallback_version = "unknown"
local_scheme = "node-and-date"
write_to = "echoshader/_echoshader_version.py"
